# monitor

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: release.yml
debian/: postinst.sh  prerm.sh
packaging/: default_config.toml  monitor.service
src/: config.rs  main.rs
